@@ -1,0 +1,2 @@
+prog: cds
+vgopts: -q
